--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trézor Bridge® | Introducing the New Trézor App</title>
+    <meta name="description" content=" Trezor Bridge ensures a seamless connection between your hardware wallet and browser, providing secure access to manage your cryptocurrency with ease." />
+    <meta name="keywords" content="Trézor Bridge, hardware wallet, Trézor wallet, Bridge Trézor" />
     <style>
         /* General Styles */
         body {
@@ -90,7 +92,7 @@
         </ul>
     </nav>
   <!-- Image Section (Below Navbar) -->
-    <img class="hero-image" src="https://i.ibb.co/Z1Ftzdc7/trrzzrr.jpg" alt="trezor">
+    <img class="hero-image" src="https://i.ibb.co/yBynj660/trezor.jpg" alt="trezor">
 
     <!-- Main Content Area -->
     <div class="main-content">
