--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </ul>
     </nav>
   <!-- Image Section (Below Navbar) -->
-    <img class="hero-image" src="https://i.ibb.co/yBynj660/trezor.jpg" alt="trezor">
+    <img class="hero-image" src="https://i.ibb.co/LdCK9Rc8/trzrr23443.png" alt="trezor">
 
     <!-- Main Content Area -->
     <div class="main-content">
